# mas

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
mas/: store.cpp  store.h
test/: CMakeLists.txt  combine_reducers_test.cpp  simple_state_test.cpp  test_common.h
